--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ numpy>=1.21.0
 pandas>=1.3.0
 scikit-learn>=0.24.0
 opacus>=1.0.0
+httpx>=0.23.0
+scipy>=1.7.0
+pydantic>=1.9.0
+celery>=5.2.0
+requests>=2.25.0
